[JSC][Wasm][Debugger] Fix detach packet reply per GDB Remote Protocol https://bugs.webkit.org/show_bug.cgi?id=305152 rdar://167802248

Reviewed by Yusuke Suzuki.

The 'D' (detach) packet must reply with OK before closing the connection,
while 'k' (kill) should not reply at all per the GDB Remote Protocol[1].

Previously both packets were handled identically without sending a reply,
causing LLDB to timeout waiting for the detach response.

Also added FIXME noting that kill currently only closes the debug session
without terminating the WebAssembly process.

[1] https://sourceware.org/gdb/current/onlinedocs/gdb.html/Packets.html

* JSTests/wasm/debugger/tests/tests.py:
(CWasmTestCase.detachTest):
(CWasmTestCase.quitTest):

Canonical link: https://commits.webkit.org/305318@main