JSTests/wasm/debugger/tests/tests.py
@@ -17,6 +17,8 @@ class CWasmTestCase(BaseTestCase):
                 self.inspectionTest()
                 self.stepTest()
                 self.memoryTest()
+                self.detachTest()
+                self.quitTest()
 
         except Exception as e:
             raise Exception(f"Breakpoint test failed: {e}")
@@ -247,6 +249,16 @@ class CWasmTestCase(BaseTestCase):
             patterns=["[0x0000000000000000-0x0000000001010000) rw- wasm_memory_0_0"],
         )
 
+    def detachTest(self):
+        self.send_lldb_command_or_raise(
+            "detach",
+            patterns=[
+                "Process 1 detached",
+            ],
+        )
+
+    def quitTest(self):
+        self.send_lldb_command_or_raise("quit", patterns=[])
 
 class SwiftWasmTestCase(BaseTestCase):
 
